# news-test

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  render.yaml  requirements.txt
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  errors.py  main.py
backend/app/clients/: ai_client.py  auth_client.py  news_client.py  reader_client.py
backend/app/db/: session.py
backend/app/models/: __init__.py  article.py
backend/app/repositories/: analysis_repository.py
backend/app/routers/: analyses.py  auth.py  health.py  news.py
backend/app/schemas/: analysis.py  common.py  news.py  user.py
backend/app/services/: analysis_service.py  news_service.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_ai_client.py  test_analyses.py  test_health.py  test_news.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  format.ts  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ArticleCard.tsx  EmptyState.tsx  ReaderPanel.tsx  SavedList.tsx  SearchBar.tsx  SentimentBadge.tsx  SignIn.tsx  TopBar.tsx  TopicChips.tsx
frontend/src/hooks/: useAnalyses.ts  useAuth.ts  useFeed.ts
